<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pennyfea.countbook.Counter">


    <EditText
        android:id="@+id/counterText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:inputType="number"
        android:text="@string/inital_value"
        android:textAlignment="center"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_minus"
        app:layout_constraintLeft_toRightOf="@+id/resetButton"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_reset"
        app:layout_constraintLeft_toRightOf="@+id/addButton"
        app:layout_constraintRight_toLeftOf="@+id/minusButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/minusButton"
        tools:layout_constraintBaseline_creator="1" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/counter_add"
        android:text="@string/counter_add"
        app:layout_constraintRight_toLeftOf="@+id/resetButton"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="@+id/resetButton"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Add_comment"
        android:text="@string/Add_comment"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_comment"
        app:layout_constraintLeft_toRightOf="@+id/edit_comment"
        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="139dp"
        android:layout_marginTop="98dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterText"
        android:id="@+id/commentListView"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp" />


    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="29dp"
        android:hint="@string/enter_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/add_comment"
        app:layout_constraintTop_toBottomOf="@+id/commentListView"
        android:layout_marginLeft="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp" />


</android.support.constraint.ConstraintLayout>
