<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pennyfea.countbook.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    >

    <EditText
    android:id="@+id/edit_message"
    android:layout_width="209dp"
    android:layout_height="0dp"
    android:hint="@string/activity_edit_message"
    android:inputType="text"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="10dp"
    app:layout_constraintBottom_toTopOf="@+id/listV"
    app:layout_constraintRight_toLeftOf="@+id/Addbutton"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:layout_constraintTop_creator="1"
    tools:layout_constraintBottom_creator="1" />

    <Button
        android:id="@+id/Addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/main_add_button"
        android:text="@string/main_add_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_message" />


    <Button
        android:id="@+id/Delebutton"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:hint="@string/delete_counters"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/listV"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/Editbutton" />

    <Button
        android:id="@+id/Editbutton"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:hint="@string/Edit_counter_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/Delebutton"
        app:layout_constraintLeft_toRightOf="@+id/Delebutton"
        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:id="@+id/listV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
